--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,14 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "allowedCommonJsDependencies": [
+            "@grpc/grpc-js",
+            "@firebase/firestore",
+            "faye-websocket",
+            "undici",
+            "@firebase/database",
+            "@firebase/auth"
+          ],
             "outputPath": "dist/my-vokabeln",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -45,12 +53,12 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2MB",
+                  "maximumError": "2.5MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
+                  "maximumWarning": "3kb",
                   "maximumError": "4kb"
                 }
               ],
