--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.11",
+    "@firebase/auth": "^1.10.0",
+    "@firebase/database": "^1.0.14",
+    "@firebase/firestore": "^4.7.10",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
